route-controller-servie 구조적용

--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.18",
+    "prettier": "2.7.1"
   }
 }
